--- a/superMarketInvoicingManage/src/main/webapp/static/css/style.css
+++ b/superMarketInvoicingManage/src/main/webapp/static/css/style.css
@@ -782,7 +782,7 @@ a.disabled {
     vertical-align: middle;
     font-size: 0;
     margin-right: 10px;
-    background: url("../image/2xing.png") no-repeat;
+    background: url("../images/2xing.png") no-repeat;
     background-size:contain;
     
 }
